2005-07-27  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: add user html header and footer
	* src/FamilyView.py: try to prevent adding a spouse that has 
	already been added
	* src/ReadXML.py: prevent adding a spouse that has already been
	added
	* src/plugins/Check.py: remove identical families in family list

2005-07-26  Alex Roitman  <shura@gramps-project.org>
	* src/ChooseParents.py (save_parents_clicked): Do not create
	family if parent is self.

2005-07-26  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: NameDisplay enhancements
	* src/FamilyView.py: NameDisplay enhancements
	* src/NameDisplay.py: NameDisplay enhancements
	* src/NameEdit.py: NameDisplay enhancements
	* src/PedView.py: NameDisplay enhancements
	* src/PeopleModel.py: NameDisplay enhancements
	* src/PeopleView.py: NameDisplay enhancements
	* src/RelLib.py: NameDisplay enhancements
	* src/Report.py: NameDisplay enhancements
	* src/SelectChild.py: NameDisplay enhancements
	* src/Witness.py: NameDisplay enhancements
	* src/gramps.glade: NameDisplay enhancements
	* src/gramps_main.py: NameDisplay enhancements

2005-07-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/NavWebPage.py: Catch missing header/footer notes; Add Surname
	page that is sorted by the number of persons.

2005-07-25  Alexander Roitman  <shura@gramps-project.org>
	* src/gramps.glade (editPerson,marriageEditor): Use Title for the
	source titles.

2005-07-24  Don Allingham  <don@gramps-project.org>
	* src/MediaView.py: don't indicate missing path for Notes, which
	aren't supposed to have a path
	* src/ReadGedcom.py: Handle PAF's non-GEDCOM compliant method of
	indicating unknown gender.

2005-07-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RelCalc.py (__init__): Correctly name column header.

2005-07-23  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/plugins/GraphViz.py: Fix computation of landscape dimensions,
	especially when generating multiple sheets
