@@ -1,3 +1,8 @@
+2005-07-28  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/WebPage.py (WebReportOptions.set_new_options):
+	Define help dictionary to document options.
+	* src/Report.py (CommandLineReport.init_options): Typo.
+
 2005-07-27  Don Allingham  <don@gramps-project.org>
 	* src/plugins/NavWebPage.py: add user html header and footer
 	* src/FamilyView.py: try to prevent adding a spouse that has 
